--- a/css/vwf.css
+++ b/css/vwf.css
@@ -1,18 +1,59 @@
 ﻿body {
-  padding-top: 50px;
+  padding-top: 60px;
   background-color: #f5f5f5;
 }
 
-.navbar-inverse {
-  background-color: #f5f5f5;
-  border-color: #ddd;
+.navbar-brand {
+  font-size: 15px;
+  line-height: 16px;
+  padding: 15px 15px 0;
 }
-.navbar-inverse .navbar-nav>li>a {
+
+.navbar .navbar-brand {
   color: #333;
 }
-.navbar-inverse .navbar-nav>.active>a, 
-.navbar-inverse .navbar-nav>.active>a:hover, 
-.navbar-inverse .navbar-nav>.active>a:focus {
+
+.navbar .navbar-brand img {
+  padding-right: 10px;
+}
+
+.navbar {
+  background-color: #fff;
+  border-color: #ddd;
+}
+.navbar .navbar-nav>li>a {
+  color: #333;
+  text-transform: uppercase;
+  font-size: 15px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.navbar .navbar-nav>.active>a, 
+.navbar .navbar-nav>.active>a:hover, 
+.navbar .navbar-nav>.active>a:focus {
   color: #222;
   background-color: #ddd;
+}
+.navbar-btn {
+  margin-top: 20px;
+}
+
+.jumbotron .vwf-title {
+  /*text-align: center;*/
+  /*padding-bottom: 20px;*/
+}
+
+.vwf-frame {
+  width: 100%;
+  height: 350px;
+  border: 1px solid #ddd;
+  background-color: #f5f5f5;
+}
+
+.vwf-footer {
+  border-top: 1px solid #ddd;
+  padding-top: 40px;
+  padding-bottom: 30px;
+  margin-top: 100px;
+  color: #777;
 }
