--- a/css/vwf.css
+++ b/css/vwf.css
@@ -41,8 +41,21 @@
 .jumbotron .vwf-title {
   /*text-align: center;*/
   /*padding-bottom: 20px;*/
+  font-size: 50px;
 }
 
+.get-started {
+  margin-top: 30px;
+  background-color: #eee;
+  padding-bottom: 50px;
+}
+.get-started h3 {
+  margin-left: 20px;
+}
+.img-get-started img {
+  float: right;
+  margin: -15px;
+}
 .feature-row h3 {
   text-align: center;
   text-transform: uppercase;
@@ -66,6 +79,5 @@
   border-top: 1px solid #ddd;
   padding-top: 40px;
   padding-bottom: 30px;
-  margin-top: 100px;
   color: #777;
 }
