--- a/css/vwf.css
+++ b/css/vwf.css
@@ -1,6 +1,6 @@
 ﻿body {
   padding-top: 60px;
-  background-color: #f5f5f5;
+  background-color: #fff;
 }
 
 .navbar-brand {
@@ -99,9 +99,13 @@
 .feature-row p {
   font-size: 18px;
 }
-.feature-row .glyphicon {
-  font-size: 36px;
-  color: #000;
+.feature-row img {
+  width: 100px;
+  height: 100px;
+}
+
+h3 small {
+  font-size: 75%;
 }
 
 .vwf-frame {
