--- a/css/vwf.css
+++ b/css/vwf.css
@@ -6,7 +6,7 @@
 .navbar-brand {
   font-size: 15px;
   line-height: 16px;
-  padding: 15px 15px 0;
+  padding: 15px 15px 15px;
 }
 
 .navbar .navbar-brand {
@@ -61,8 +61,7 @@
   color: #333;
   text-transform: uppercase;
   font-size: 15px;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 30px 10px;
 }
 .navbar .navbar-nav>.active>a, 
 .navbar .navbar-nav>.active>a:hover, 
@@ -70,8 +69,22 @@
   color: #222;
   background-color: #ddd;
 }
+.navbar-collapse.in .navbar-nav>li>a {
+  padding: 10px 10px;
+}
 .navbar-btn {
   margin-top: 20px;
+}
+.navbar-collapse.in .navbar-btn {
+  margin-top: 10px;
+  float: none!important;
+}
+.navbar-toggle {
+  border: 1px solid #ddd;
+  margin-top: 20px;
+}
+.navbar-toggle .icon-bar {
+  background-color: #ddd;
 }
 
 .jumbotron .vwf-title {
@@ -85,12 +98,19 @@
   background-color: #eee;
   padding-bottom: 50px;
 }
+.get-started h2 {
+  margin: 40px 0 20px;
+  text-align: center;
+  font-size: 40px;
+}
 .get-started h3 {
   margin-left: 20px;
 }
 .img-get-started img {
   float: right;
   margin: -15px;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
 }
 .feature-row h3 {
   text-align: center;
