--- a/css/vwf.css
+++ b/css/vwf.css
@@ -92,6 +92,11 @@
   /*padding-bottom: 20px;*/
   font-size: 50px;
 }
+.github-img {
+  width: 24px;
+  height: 24px;
+  margin-top: -5px;
+}
 
 .get-started {
   margin-top: 30px;
