--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,64 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Virtual World Framework</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/syntax.css">
-    <link href="css/vwf.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-
-    <div class="navbar navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">
-            <img src="/images/vwf-logo-100x100.png" class="pull-left" alt="VWF Duck Logo">
-            <span class="pull-right">Virtual<br>World<br>Framework</span>
-          </a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#">Getting Started</a></li>
-            <li><a href="#">Demos</a></li>
-            <li><a href="#">Documentation</a></li>
-            <li><a href="#">Downloads</a></li>
-          </ul>
-          <a class="btn btn-info navbar-btn pull-right" role="button" href="#">View on Github</a>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-
+{% include header.html %}
     {{ content }}
-
-    <!-- Footer
-    ================================================== -->
-    <footer class="vwf-footer">
-      <div class="container">
-        <p>Development of the Virtual World Framework is sponsored by the Department of Defense and is licensed using Apache II. Source is available on Github.</p>
-        <p>"Collaboration" symbol by Krisada, "Toolbox" symbol by Dolly Vu, "3D Glasses" symbol by Fabio Grande, from <a href="http://thenounproject.com">The Noun Project</a> collection.
-      </div>
-    </footer>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery-1.10.2.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/ZeroClipboard.min.js"></script>
-    <script src="js/index.js"></script>
-  </body>
-</html>
+{% include footer.html %}
