--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,14 +26,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="/">
             <img src="/images/vwf-logo-100x100.png" class="pull-left" alt="VWF Duck Logo">
             <span class="pull-right">Virtual<br>World<br>Framework</span>
           </a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">Getting Started</a></li>
+            <li><a href="/getting_started.html">Getting Started</a></li>
             <li><a href="#">Demos</a></li>
             <li><a href="#">Documentation</a></li>
             <li><a href="#">Downloads</a></li>
