Show the install button dependent on platform.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,7 @@
             <li><a href="#">Documentation</a></li>
             <li><a href="#">Downloads</a></li>
           </ul>
-          <a class="btn btn-info navbar-btn pull-right" role="button" href="#">View on Github</a>
+          <a href="http://github.com/virtual-world-framework/vwf" class="btn btn-info navbar-btn pull-right" role="button">View on Github</a>
         </div><!--/.nav-collapse -->
       </div>
     </div>
