--- a/css/vwf.css
+++ b/css/vwf.css
@@ -137,11 +137,19 @@ h3 small {
   padding: 0;
   line-height: 0;
 }
+.vwf-panel .panel-footer {
+  line-height: 1.4;
+}
 .vwf-frame {
   width: 100%;
   height: 350px;
   border: 1px solid #ddd;
   background-color: #f5f5f5;
+}
+
+#macInstall {
+  margin-top: 20px;
+  line-height: 1.4;
 }
 
 .vwf-footer {
