Add demos and move script block to end of page.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,5 +13,6 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/ZeroClipboard.min.js"></script>
     <script src="js/index.js"></script>
+    {% contentblock scripts %}
   </body>
 </html>
