--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/getting_started.html">Getting Started</a></li>
-            <li><a href="#">Demos</a></li>
+            <li><a href="/demos.html">Demos</a></li>
             <li><a href="#">Documentation</a></li>
             <li><a href="#">Downloads</a></li>
           </ul>
