--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
             <li><a href="/getting_started.html">Getting Started</a></li>
             <li><a href="/demos.html">Demos</a></li>
             <li><a href="#">Documentation</a></li>
-            <li><a href="#">Downloads</a></li>
+            <li><a href="/downloads.html">Downloads</a></li>
           </ul>
           <a href="http://github.com/virtual-world-framework/vwf" class="btn btn-info navbar-btn pull-right" role="button">View on Github</a>
         </div><!--/.nav-collapse -->
