Update docs layout to keep documentation menu in a static position, and remove bullets. Still needs formatting work, but at least the menu is usable now.

--- a/css/vwf.css
+++ b/css/vwf.css
@@ -159,3 +159,13 @@ h3 small {
   padding-bottom: 30px;
   color: #777;
 }
+
+.navmenu {
+  position:fixed;
+  top:100px;
+  left:40px;
+}
+
+.navmenu ul {
+  list-style:none;
+}
