--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -8,49 +8,53 @@ layout: default
 			<!-- Begin documentation specific layout -->
 			<div id='navmenu' class='navmenu'>
 				<ul>
-					<li><a href='documentation.html#introduction' class='header' title='Introduction'>Introduction</a></li>
-					<li><a href='documentation.html#requirements' title='Requirements'>Requirements</a></li>
-					<li><a href='documentation.html#troubleshooting' title='Troubleshooting'>Troubleshooting</a></li>
-					<li><a href='documentation.html#install' title='Installation'>Installation</a></li>
+					<li><a href='#introduction' class='header' title='Introduction'>Introduction</a></li>
+					<li><a href='#requirements' title='Requirements'>Requirements</a></li>
+					<li><a href='#troubleshooting' title='Troubleshooting'>Troubleshooting</a></li>
+					<li><a href='#install' title='Installation'>Installation</a></li>
 					<br/>
-					<li><a href='documentation.html#tutorials' class='header' title='Tutorials'>Tutorials</a></li>
-					<li><a href='documentation.html#tutorial1' title='Tutorial1'>Hello World Tutorial</a></li>
-					<li><a href='documentation.html#tutorial2' title='Tutorial2'>Sandtable Tutorial</a></li>
+					<li><a href='#tutorials' class='header' title='Tutorials'>Tutorials</a></li>
+					<li><a href='#tutorial1' title='Tutorial1'>Hello World Tutorial</a></li>
+					<li><a href='#tutorial2' title='Tutorial2'>Sandtable Tutorial</a></li>
 					<br/>
-					<li><a href='documentation.html#devguide' class='header' title='Dev Guide'>Dev Guide</a></li>
-					<li><a href='documentation.html#architecture' title='Architecture'>Architecture</a></li>
-					<li><a href='documentation.html#components' title='Components'>Components</a></li>
-					<li><a href='documentation.html#cameras' title='Cameras'>Cameras</a></li>
-					<li><a href='documentation.html#lights' title='Lights'>Lights</a></li>
-					<li><a href='documentation.html#prototypes' title='Prototypes'>Prototypes</a></li>
-					<li><a href='documentation.html#behaviors' title='Behaviors'>Behaviors</a></li>
-					<li><a href='documentation.html#animations' title='Animations'>Animations</a></li>
-					<li><a href='documentation.html#html' title='HTML'>HTML</a></li>
-					<li><a href='documentation.html#drivers' title='Drivers'>Drivers</a></li>
-					<li><a href='documentation.html#editor' title='Editor'>Editor</a></li>
-					<li><a href='documentation.html#querying' title='Querying'>Querying</a></li>
+					<li><a href='#devguide' class='header' title='Dev Guide'>Dev Guide</a></li>
+					<li><a href='#architecture' title='Architecture'>Architecture</a></li>
+					<li><a href='#components' title='Components'>Components</a></li>
+					<li><a href='#cameras' title='Cameras'>Cameras</a></li>
+					<li><a href='#lights' title='Lights'>Lights</a></li>
+					<li><a href='#prototypes' title='Prototypes'>Prototypes</a></li>
+					<li><a href='#behaviors' title='Behaviors'>Behaviors</a></li>
+					<li><a href='#animations' title='Animations'>Animations</a></li>
+					<li><a href='#html' title='HTML'>HTML</a></li>
+					<li><a href='#drivers' title='Drivers'>Drivers</a></li>
+					<li><a href='#editor' title='Editor'>Editor</a></li>
+					<li><a href='#querying' title='Querying'>Querying</a></li>
 					<br/>
-					<li><a href='documentation.html#cookbook' class='header' title='Cookbook'>Cookbook</a></li>
-					<li><a href='documentation.html#multiuser' title='Multiuser'>Multiuser</a></li>
-					<li><a href='documentation.html#simulation' title='Simulation'>Simulation</a></li>
-					<li><a href='documentation.html#2d-interface' title='2D-Interface'>2D Interface</a></li>
-					<li><a href='documentation.html#materials' title='Materials'>Materials</a></li>
-					<li><a href='documentation.html#chat' title='Chat'>Chat</a></li>
-					<li><a href='documentation.html#sound' title='Sound'>Sound</a></li>
-					<li><a href='documentation.html#transforms' title='Transforms'>Transforms</a></li>
-					<li><a href='documentation.html#lesson' title='Lesson'>Lesson</a></li>
-					<li><a href='documentation.html#logging' title='Logging'>Logging</a></li>
-					<li><a href='documentation.html#persistence' title='Persistence'>Persistence</a></li>
-					<li><a href='documentation.html#testing' title='Testing'>Testing</a></li>
-					<li><a href='documentation.html#pitfalls' title='Pitfalls'>Pitfalls</a></li>
+					<li><a href='#cookbook' class='header' title='Cookbook'>Cookbook</a></li>
+					<li><a href='#multiuser' title='Multiuser'>Multiuser</a></li>
+					<li><a href='#simulation' title='Simulation'>Simulation</a></li>
+					<li><a href='#2d-interface' title='2D-Interface'>2D Interface</a></li>
+					<li><a href='#materials' title='Materials'>Materials</a></li>
+					<li><a href='#chat' title='Chat'>Chat</a></li>
+					<li><a href='#sound' title='Sound'>Sound</a></li>
+					<li><a href='#transforms' title='Transforms'>Transforms</a></li>
+					<li><a href='#lesson' title='Lesson'>Lesson</a></li>
+					<li><a href='#logging' title='Logging'>Logging</a></li>
+					<li><a href='#persistence' title='Persistence'>Persistence</a></li>
+					<li><a href='#testing' title='Testing'>Testing</a></li>
+					<li><a href='#pitfalls' title='Pitfalls'>Pitfalls</a></li>
 					<br/>
-					<li><a href='documentation.html#application-api' class='header' title='APIs'>APIs</a></li>
-					<li><a href='documentation.html#application-api' title='Application API'>Application API</a></li>
-					<li><a href='documentation.html#system-api' title='System API'>System API</a></li>
+					<li><a href='#application-api' class='header' title='APIs'>APIs</a></li>
+					<li><a href='#application-api' title='Application API'>Application API</a></li>
+					<li><a href='#system-api' title='System API'>System API</a></li>
 				</ul>
 			</div>			
 			{% capture introduction %}{% include docs/introduction.md %}{% endcapture %}
 			{{ introduction | markdownify }}
+			{% capture requirements %}{% include docs/requirements.md %}{% endcapture %}
+			{{ requirements | markdownify }}
+			{% capture troubleshooting %}{% include docs/troubleshooting.md %}{% endcapture %}
+			{{ troubleshooting | markdownify }}
 			{% capture install %}{% include docs/install.md %}{% endcapture %}
 			{{ install | markdownify }}
 			{% capture tutorial1 %}{% include docs/tutorial1.md %}{% endcapture %}
