Update current sessions table to use grid layout.

--- a/css/vwf.css
+++ b/css/vwf.css
@@ -160,21 +160,24 @@ h3 small {
   color: #777;
 }
 
-.current-col1 {
-  width:10%;
-}
-
-.current-col2 {
-  width:60%;
-}
-
-.current-col3 {
-  text-align:right;
-  width:30%;
-}
-
 .current-header {
   font-size:18px;
+}
+
+.session-table {
+  margin-right: 0px;
+  margin-left: 0px;	
+}
+
+.session {
+  display: table;
+}
+
+.session .vcenter {
+  display: table-cell;
+  vertical-align: middle;
+  padding: 2px;
+  height: 40px;
 }
 
 .navmenu {
