--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -8,16 +8,16 @@ layout: default
 			<!-- Begin documentation specific layout -->
 			<div id='navmenu' class='navmenu'>
 				<ul>
-					<li><a href='#introduction' class='header' title='Introduction'>Introduction</a></li>
+					<li><a href='#introduction' class='header' title='Introduction'><b>Introduction</b></a></li>
 					<li><a href='#requirements' title='Requirements'>Requirements</a></li>
 					<li><a href='#troubleshooting' title='Troubleshooting'>Troubleshooting</a></li>
 					<li><a href='#install' title='Installation'>Installation</a></li>
 					<br/>
-					<li><a href='#tutorials' class='header' title='Tutorials'>Tutorials</a></li>
-					<li><a href='#tutorial1' title='Tutorial1'>Hello World Tutorial</a></li>
-					<li><a href='#tutorial2' title='Tutorial2'>Sandtable Tutorial</a></li>
+					<li><a href='#tutorials' class='header' title='Tutorials'><b>Tutorials</b></a></li>
+					<li><a href='#tutorial1' title='Tutorial1'>Hello World</a></li>
+					<li><a href='#tutorial2' title='Tutorial2'>Sandtable</a></li>
 					<br/>
-					<li><a href='#devguide' class='header' title='Dev Guide'>Dev Guide</a></li>
+					<li><a href='#devguide' class='header' title='Dev Guide'><b>Dev Guide</b></a></li>
 					<li><a href='#architecture' title='Architecture'>Architecture</a></li>
 					<li><a href='#components' title='Components'>Components</a></li>
 					<li><a href='#cameras' title='Cameras'>Cameras</a></li>
@@ -30,7 +30,7 @@ layout: default
 					<li><a href='#editor' title='Editor'>Editor</a></li>
 					<li><a href='#querying' title='Querying'>Querying</a></li>
 					<br/>
-					<li><a href='#cookbook' class='header' title='Cookbook'>Cookbook</a></li>
+					<li><a href='#cookbook' class='header' title='Cookbook'><b>Cookbook</b></a></li>
 					<li><a href='#multiuser' title='Multiuser'>Multiuser</a></li>
 					<li><a href='#simulation' title='Simulation'>Simulation</a></li>
 					<li><a href='#2d-interface' title='2D-Interface'>2D Interface</a></li>
@@ -44,7 +44,7 @@ layout: default
 					<li><a href='#testing' title='Testing'>Testing</a></li>
 					<li><a href='#pitfalls' title='Pitfalls'>Pitfalls</a></li>
 					<br/>
-					<li><a href='#application-api' class='header' title='APIs'>APIs</a></li>
+					<li><a href='#application-api' class='header' title='APIs'><b>APIs</b></a></li>
 					<li><a href='#application-api' title='Application API'>Application API</a></li>
 					<li><a href='#system-api' title='System API'>System API</a></li>
 				</ul>
