--- a/css/vwf.css
+++ b/css/vwf.css
@@ -3,6 +3,10 @@
   background-color: #fff;
 }
 
+h2, h3 {
+  font-family: "Arial Narrow Bold", sans-serif;
+}
+
 .navbar-brand {
   font-size: 15px;
   line-height: 16px;
@@ -56,6 +60,7 @@
 .navbar {
   background-color: #fff;
   border-color: #ddd;
+  font-family: "Arial Narrow Bold", sans-serif;
 }
 .navbar .navbar-nav>li>a {
   color: #333;
