Add current sessions script to demos page.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/ZeroClipboard.min.js"></script>
+    <script src="js/application.js"></script>
     {% contentblock scripts %}
   </body>
 </html>
