--- a/demos.haml
+++ b/demos.haml
@@ -34,7 +34,7 @@ title: Demos - Virtual World Framework
           %a{href: "https://ec2-54-226-9-164.compute-1.amazonaws.com/kimray/"}
             %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-kimray.png"}
 
-  #bzflag.panel.panel-default.panel-demo.core
+  .panel.panel-default.panel-demo.core{"data-app-name" => "bzflag"}
     .panel-body
       .row
         .demo-info.col-sm-8
@@ -46,7 +46,7 @@ title: Demos - Virtual World Framework
           %a{href: "http://master.virtual.wf/bzflag"}
             %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-bzflag.png"}
 
-  #command-center.panel.panel-default.panel-demo.core
+  .panel.panel-default.panel-demo.core{"data-app-name" => "command-center"}
     .panel-body
       .row
         .demo-info.col-sm-8
@@ -58,7 +58,7 @@ title: Demos - Virtual World Framework
           %a{href: "http://master.virtual.wf/command-center"}
             %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-command-center.png"}
 
-  #humvee-lesson.panel.panel-default.panel-demo.core
+  .panel.panel-default.panel-demo.core{"data-app-name" => "humvee-lesson"}
     .panel-body
       .row
         .demo-info.col-sm-8
@@ -70,7 +70,7 @@ title: Demos - Virtual World Framework
           %a{href: "http://master.virtual.wf/humvee-lesson"}
             %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-humvee-lesson.png"}
 
-  #radio-lesson.panel.panel-default.panel-demo.core
+  .panel.panel-default.panel-demo.core{"data-app-name" => "radio-lesson"}
     .panel-body
       .row
         .demo-info.col-sm-8
@@ -82,7 +82,7 @@ title: Demos - Virtual World Framework
           %a{href: "http://master.virtual.wf/radio-lesson"}
             %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-radio-lesson.png"}
 
-  .panel.panel-default.panel-demo
+  .panel.panel-default.panel-demo{"data-app-name" => "agi/cesium"}
     .panel-body
       .row
         .demo-info.col-sm-8
@@ -95,7 +95,7 @@ title: Demos - Virtual World Framework
           %a{href: "http://master.virtual.wf/agi/cesium#!cesium"}
             %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-agi-cesium.jpg"}
 
-  #minesweeper.panel.panel-default.panel-demo.core
+  .panel.panel-default.panel-demo.core{"data-app-name" => "minesweeper"}
     .panel-body
       .row
         .demo-info.col-sm-8
@@ -107,7 +107,7 @@ title: Demos - Virtual World Framework
           %a{href: "http://master.virtual.wf/minesweeper"}
             %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-minesweeper.png"}
 
-  #tile-puzzle-2D.panel.panel-default.panel-demo.core
+  .panel.panel-default.panel-demo.core{"data-app-name" => "tile-puzzle-2D"}
     .panel-body
       .row
         .demo-info.col-sm-8
