--- a/css/vwf.css
+++ b/css/vwf.css
@@ -189,7 +189,7 @@ h3 small {
   top: 80px;
   left: 0;
   padding-bottom: 80px;
-  overflow: scroll;
+  overflow: auto;
   height: 100%;
   border-right: 1px solid #ddd;
   z-index: 100;
@@ -197,7 +197,7 @@ h3 small {
 
 ul.navmenu {
   margin-top: 30px;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 ul.navmenu > li {
