Hide Z-shift until they approve.

--- a/demos.haml
+++ b/demos.haml
@@ -207,14 +207,14 @@ title: Demos - Virtual World Framework
         %a{href: "http://www.nmjc.edu/"}
           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-nmjc.png"}
           
-.panel.panel-default.panel-demo
-  .panel-body
-    .row
-      .col-sm-8
-        %h3 Z Shift
-        %p
-          %a{target: "_blank", href:"http://www.zshiftgroup.com/"} Z Shift
-          is developing VWF apps for a virtual command center in correlation with JS J7.
-      .col-sm-4
-        %a{href: "http://www.zshiftgroup.com/"}
-          %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-zshift.png"}
+/ .panel.panel-default.panel-demo
+/   .panel-body
+/     .row
+/       .col-sm-8
+/         %h3 Z Shift
+/         %p
+/           %a{target: "_blank", href:"http://www.zshiftgroup.com/"} Z Shift
+/           is developing VWF apps for a virtual command center in correlation with JS J7.
+/       .col-sm-4
+/         %a{href: "http://www.zshiftgroup.com/"}
+/           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-zshift.png"}
