--- a/css/vwf.css
+++ b/css/vwf.css
@@ -212,7 +212,6 @@ h3 small {
   position: fixed;
   top: 80px;
   left: 0;
-  padding-bottom: 80px;
   overflow: auto;
   height: 100%;
   border-right: 1px solid #ddd;
@@ -222,6 +221,7 @@ h3 small {
 ul.navmenu {
   margin-top: 30px;
   font-size: 16px;
+  margin-bottom: 120px;
 }
 
 ul.navmenu > li {
