Switch fonts to Open Sans.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,7 @@
             <li><a href="/documentation.html">Documentation</a></li>
             <li><a href="/downloads.html">Downloads</a></li>
           </ul>
-          <a href="http://github.com/virtual-world-framework/vwf" class="btn btn-info navbar-btn pull-right" role="button">View on GitHub</a>
+          <a href="http://github.com/virtual-world-framework/vwf" class="btn btn-info navbar-btn pull-right hidden-sm" role="button">View on GitHub</a>
         </div><!--/.nav-collapse -->
       </div>
     </div>
