--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,4 +1,4 @@
-@import url("//fonts.googleapis.com/css?family=News+Cycle:400,700");
+@import url("//fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700");
 
 /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
 
@@ -300,7 +300,7 @@ html {
 
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
-  font-size: 15px;
+  font-size: 17px;
   line-height: 1.428571429;
   color: #777777;
   background-color: #ffffff;
@@ -393,7 +393,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: "News Cycle", "Arial Narrow Bold", sans-serif;
+  font-family: "Open Sans Condensed", "Arial Narrow Bold", sans-serif;
   font-weight: 700;
   line-height: 1.1;
   color: #000000;
@@ -7508,13 +7508,13 @@ td.visible-print {
 }
 
 .navbar {
-  font-family: "News Cycle", "Arial Narrow Bold", sans-serif;
-  font-size: 18px;
+  font-family: "Open Sans Condensed", "Arial Narrow Bold", sans-serif;
+  font-size: 17px;
   font-weight: 700;
 }
 
 .navbar-brand {
-  font-size: 18px;
+  font-size: 17px;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -7560,7 +7560,7 @@ td.visible-print {
 .jumbotron h4,
 .jumbotron h5,
 .jumbotron h6 {
-  font-family: "News Cycle", "Arial Narrow Bold", sans-serif;
+  font-family: "Open Sans Condensed", "Arial Narrow Bold", sans-serif;
   font-weight: 700;
   color: #000;
 }
