A few CSS touchups:
- Make css includes consistent.
- Remove border from downloads iframe.
- Use h1s on Demos for consistency.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,10 @@
     <title>Virtual World Framework</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/syntax.css">
-    <link href="css/vwf.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/syntax.css" rel="stylesheet">
+    <!-- Custom styles -->
+    <link href="/css/vwf.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
