--- a/css/vwf.css
+++ b/css/vwf.css
@@ -284,3 +284,10 @@ code {
   margin-top: 10px;
   margin-right: 15px;
 }
+
+/* Downloads */
+
+.download-frame {
+  width: 100%;
+  border: none;
+}
