--- a/css/vwf.css
+++ b/css/vwf.css
@@ -9,6 +9,15 @@ a[name] {
   display: inline-block; /* required for webkit browsers */
 }
 
+h1 a {
+  color: #000;
+}
+
+h1 a:hover {
+  color: #000;
+  text-decoration: none;
+}
+
 .navbar-brand {
   font-size: 17px;
   line-height: 17px;
@@ -228,7 +237,7 @@ h3 small {
   font-family: "Open Sans Condensed", "Arial Narrow Bold", sans-serif;
   font-weight: 700;
   line-height: 1.1;
-  font-size: 17px;
+  font-size: 19px;
 }
 
 ul.navmenu {
@@ -287,7 +296,12 @@ code {
 
 /* Downloads */
 
+body.downloads-page {
+  padding-top: 0;
+}
+
 .download-frame {
   width: 100%;
   border: none;
 }
+
