Try documentation page at same width.

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -4,7 +4,7 @@ layout: default_no_footer
 
 <div class="container" id="docs">
   <div class="row">
-    <div id="nav" class="col-md-2 hidden-sm hidden-xs">
+    <div id="nav" class="col-md-2 col-md-offset-1 hidden-sm hidden-xs">
       <ul class="navmenu list-unstyled">
         <li>
           <a href='#introduction' class='header' title='Introduction'>Introduction</a>
@@ -64,7 +64,7 @@ layout: default_no_footer
       </ul>
       <!-- End documentation specific layout -->
     </div>
-    <div id="content" class="col-md-9 col-md-offset-2">
+    <div id="content" class="col-md-8 col-md-offset-3">
       {{content}} 
     </div>
   </div>
