--- a/css/vwf.css
+++ b/css/vwf.css
@@ -228,17 +228,35 @@ h3 small {
 }
 
 #nav {
-  position: fixed;
-  top: 80px;
-  left: 0;
-  text-align: right;
+  /*position: fixed;*/
+  /*top: 80px;*/
+  /*left: 0;*/
+  /*text-align: right;*/
   overflow: auto;
   height: 100%;
-  z-index: 100;
+  /*z-index: 100;*/
   font-family: "Open Sans Condensed", "Arial Narrow Bold", sans-serif;
   font-weight: 700;
   line-height: 1.1;
   font-size: 19px;
+}
+
+@media (min-width: 992px) {
+  #nav {
+    /*margin-left: 80px;*/
+  }
+}
+
+@media (min-width: 1200px) {
+  #nav {
+    /*margin-left: 100px;*/
+  }
+}
+
+.nav-wrap {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 @media (min-width: 992px) {
