Remove tutorials and link to Getting Started.

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -16,11 +16,7 @@ layout: default_no_footer
           </ul>
         </li>
         <li>
-          <a href='#tutorials' class='header' title='Tutorials'>Tutorials</a>
-          <ul class="list-unstyled">
-            <li><a href='#tutorial1' title='Tutorial1'>Hello World</a></li>
-            <li><a href='#tutorial2' title='Tutorial2'>Sandtable</a></li>
-          </ul>
+          <a href='/getting_started.html' class='header'>Getting Started</a>
         </li>
         <li>
           <a href='#devguide' class='header' title='Dev Guide'>Dev Guide</a>
