Add new blurbs to Who's Using VWF section.

--- a/demos.haml
+++ b/demos.haml
@@ -163,6 +163,33 @@ title: Demos - Virtual World Framework
         %a{href: "http://www.agi.com/"}
           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-agi.jpg"}
 
+.panel.panel-default.panel-demo
+  .panel-body
+    .row
+      .col-sm-8
+        %h3 Citizens Foundation of Iceland
+        %p
+          The
+          %a{target: "_blank", href:"http://spjall.betrireykjavik.is/30/contact/"} Citizens Foundation
+          created an app entitled 
+          %em Your Priorities 3D 
+          to bring people together in real time virtual reality workshops, as part of the Better Reykjavik Pracipatory budgeting. Each neighborhood had its own workshop, where over 300 total citizens participated creating multimedia presentations for new ideas. 
+      .col-sm-4
+        %a{href: "http://spjall.betrireykjavik.is/30/contact/"}
+          %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-citizens.jpeg"}
+
+.panel.panel-default.panel-demo
+  .panel-body
+    .row
+      .col-sm-8
+        %h3 Cosmos3D
+        %p
+          %a{target: "_blank", href:"http://cosmos3d.com/"} cosmos3d.com
+          is a new virtual world platform, built on top of the Sandbox app. Users can create persistent worlds and collaborate in realtime with others. It provides a large set of tools for character customization and content creation, as well as a Javascript API to develop gadgets, effects or game logic. Additionally, the platform has a virtual currency system and asset marketplace that provides professionals and hobby artists the opportunity to earn real money from selling their creations to other users.
+      .col-sm-4
+        %a{href: "http://cosmos3d.com/"}
+          %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-cosmos.jpeg"}
+
 / .panel.panel-default.panel-demo
 /   .panel-body
 /     .row
@@ -225,7 +252,31 @@ title: Demos - Virtual World Framework
       .col-sm-4
         %a{href: "http://www.nmjc.edu/"}
           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-nmjc.png"}
-          
+
+.panel.panel-default.panel-demo
+  .panel-body
+    .row
+      .col-sm-8
+        %h3 Universidade Federal da Grande Dourados
+        %p
+          %a{target: "_blank", href:"http://portal.ufgd.edu.br/"} Universidade Federal da Grande Dourados (UFGD)
+          is building a physics lab app, allowing for students to type in an angle, force, and weight and plot an associated parabola, to eventually be integrated into a Moodle-based distance learning course for approximately 400 students. 
+      .col-sm-4
+        %a{href: "http://portal.ufgd.edu.br/"}
+          %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-ufgd.png"}
+        
+.panel.panel-default.panel-demo
+  .panel-body
+    .row
+      .col-sm-8
+        %h3 Wearality
+        %p
+          %a{target: "_blank", href:"http://wearality.com/"} Wearality
+          is on the cutting edge of augmented and virutal reality, which is emerging as the premier way for humans to interact with technology. Wearality offers a truly immersive experience through patented optics and a field of view of 170 degrees, while remaining extremely lightweight. 
+      .col-sm-4
+        %a{href: "http://wearality.com/"}
+          %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-wearality.png"}
+
 / .panel.panel-default.panel-demo
 /   .panel-body
 /     .row
