--- a/demos.haml
+++ b/demos.haml
@@ -184,7 +184,7 @@ title: Demos - Virtual World Framework
       .col-sm-8
         %h3 Cosmos3D
         %p
-          %a{target: "_blank", href:"http://cosmos3d.com/"} cosmos3d.com
+          %a{target: "_blank", href:"http://cosmos3d.com/"} Cosmos3d.com
           is a new virtual world platform, built on top of the Sandbox app. Users can create persistent worlds and collaborate in realtime with others. It provides a large set of tools for character customization and content creation, as well as a Javascript API to develop gadgets, effects or game logic. Additionally, the platform has a virtual currency system and asset marketplace that provides professionals and hobby artists the opportunity to earn real money from selling their creations to other users.
       .col-sm-4
         %a{href: "http://cosmos3d.com/"}
