Minor tweaks to new blurbs.

--- a/demos.haml
+++ b/demos.haml
@@ -170,10 +170,10 @@ title: Demos - Virtual World Framework
         %h3 Citizens Foundation of Iceland
         %p
           The
-          %a{target: "_blank", href:"http://spjall.betrireykjavik.is/30/contact/"} Citizens Foundation
+          %a{target: "_blank", href:"http://www.citizens.is/citizens-foundation-main-achievements/"} Citizens Foundation
           created an app entitled 
           %em Your Priorities 3D 
-          to bring people together in real time virtual reality workshops, as part of the Better Reykjavik Pracipatory budgeting. Each neighborhood had its own workshop, where over 300 total citizens participated creating multimedia presentations for new ideas. 
+          to bring people together in real time virtual reality workshops. These workshops were used as part of participatory budgeting for the Better Reykjavik initiative. Each neighborhood held its own workshop, where over 300 citizens participated, creating multimedia presentations for new ideas. 
       .col-sm-4
         %a{href: "http://spjall.betrireykjavik.is/30/contact/"}
           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-citizens.jpeg"}
@@ -185,7 +185,7 @@ title: Demos - Virtual World Framework
         %h3 Cosmos3D
         %p
           %a{target: "_blank", href:"http://cosmos3d.com/"} Cosmos3d.com
-          is a new virtual world platform, built on top of the Sandbox app. Users can create persistent worlds and collaborate in realtime with others. It provides a large set of tools for character customization and content creation, as well as a Javascript API to develop gadgets, effects or game logic. Additionally, the platform has a virtual currency system and asset marketplace that provides professionals and hobby artists the opportunity to earn real money from selling their creations to other users.
+          is a free-to-play virtual world platform and social community, built on top of the Sandbox app. Users can create persistent 3D worlds and collaborate in real time with others. It provides a large set of tools for character customization and content creation, as well as a Javascript API to develop gadgets, effects or game logic. Additionally, the platform has an asset marketplace allowing both professionals and hobbyists to earn real money from selling their creations.
       .col-sm-4
         %a{href: "http://cosmos3d.com/"}
           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-cosmos.jpeg"}
@@ -260,7 +260,7 @@ title: Demos - Virtual World Framework
         %h3 Universidade Federal da Grande Dourados
         %p
           %a{target: "_blank", href:"http://portal.ufgd.edu.br/"} Universidade Federal da Grande Dourados (UFGD)
-          is building a physics lab app, allowing for students to type in an angle, force, and weight and plot an associated parabola, to eventually be integrated into a Moodle-based distance learning course for approximately 400 students. 
+          is building a physics lab app, allowing for students to type in an angle, force, and weight and plot an associated parabola. The app will be integrated into a Moodle-based distance learning course for approximately 400 students. 
       .col-sm-4
         %a{href: "http://portal.ufgd.edu.br/"}
           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-ufgd.png"}
