Update Citizens links.

--- a/demos.haml
+++ b/demos.haml
@@ -170,12 +170,12 @@ title: Demos - Virtual World Framework
         %h3 Citizens Foundation of Iceland
         %p
           The
-          %a{target: "_blank", href:"http://www.citizens.is/citizens-foundation-main-achievements/"} Citizens Foundation
+          %a{target: "_blank", href:"http://www.citizens.is"} Citizens Foundation
           created an app entitled 
-          %em Your Priorities 3D 
+          %a{target: "_blank", href:"http://spjall.betrireykjavik.is/30/contact/"} Your Priorities 3D 
           to bring people together in real time virtual reality workshops. These workshops were used as part of participatory budgeting for the Better Reykjavik initiative. Each neighborhood held its own workshop, where over 300 citizens participated, creating multimedia presentations for new ideas. 
       .col-sm-4
-        %a{href: "http://spjall.betrireykjavik.is/30/contact/"}
+        %a{href: "http://www.citizens.is/"}
           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-citizens.jpeg"}
 
 .panel.panel-default.panel-demo
