--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,7 +37,7 @@
             <li><a href="/getting_started.html">Getting Started</a></li>
             <li><a href="/demos.html">Demos</a></li>
             <li><a href="/documentation.html">Documentation</a></li>
-            <li><a href="/downloads.html">Downloads</a></li>
+            <li><a href="/releases.html">Downloads</a></li>
           </ul>
           <a href="http://github.com/virtual-world-framework/vwf" class="btn btn-info navbar-btn pull-right hidden-sm" role="button">View on GitHub</a>
         </div><!--/.nav-collapse -->
