--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,10 +9,12 @@
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-1.10.2.min.js"></script>
+    
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/ZeroClipboard.min.js"></script>
     <script src="js/application.js"></script>
     {% contentblock scripts %}
+    {% include analytics.html %}
   </body>
 </html>
