--- a/demos.haml
+++ b/demos.haml
@@ -163,10 +163,10 @@ title: Demos - Virtual World Framework
         %h3 Joint Staff J7
         %p
           The
-          %a{target: "_blank", href:"http://www.jcs.mil/page.aspx?id=22"} Joint Staff J7 (JS J7)
+          %a{target: "_blank", href:"http://www.jcs.mil/Directorates/J7%7CJointForceDevelopment.aspx"} Joint Staff J7 (JS J7)
           supports the joint warfighter through Joint Force Development in order to advance the operational effectiveness of the current and future joint force. JS J7 is using VWF to create a virtual joint operations center to support their traditional joint collective training responsibilities and improve learning and execution across the broader training spectrum - to include enhancing individual joint training and infusing unit home-station training with joint and coalition context.
       .col-sm-4
-        %a{href: "http://www.jcs.mil/page.aspx?id=22"}
+        %a{href: "http://www.jcs.mil/Directorates/J7%7CJointForceDevelopment.aspx"}
           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-j7.png"}
 
 / .panel.panel-default.panel-demo
