--- a/demos.haml
+++ b/demos.haml
@@ -56,6 +56,12 @@ title: Demos - Virtual World Framework
       .col-sm-4
         %a{href: "https://demo.virtual.wf/command-center"}
           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-command-center.png"}
+    .row
+      .col-xs-12
+        .alert.alert-warning
+          %p.small
+            %span.glyphicon.glyphicon-warning-sign
+            This demo features highly detailed models and may not load on slower internet connections.
 
 .panel.panel-default.panel-demo.core{"data-app-name" => "humvee-lesson"}
   .panel-body
