--- a/demos.haml
+++ b/demos.haml
@@ -87,18 +87,18 @@ title: Demos - Virtual World Framework
         %a{href: "https://demo.virtual.wf/radio-lesson"}
           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-radio-lesson.png"}
 
-.panel.panel-default.panel-demo{"data-app-name" => "agi/cesium"}
-  .panel-body
-    .row
-      .demo-info.col-sm-8
-        %h3 AGI's Cesium
-        %p
-          %a{target:"_blank", href:"http://www.agi.com/"} Analytical Graphics, Inc's (AGI)
-          Cesium is a web-based globe and map engine for visualizing dynamic data. This demo app allows a user to have synchronized camera views across multiple clients. Pressing the "R" key will reset the synchronized views across all instances.
-        %a.btn.btn-info{role: "button", href: "https://demo.virtual.wf/agi/cesium#!cesium"} Launch New Session
-      .col-sm-4
-        %a{href: "https://demo.virtual.wf/agi/cesium#!cesium"}
-          %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-agi-cesium.jpg"}
+/ .panel.panel-default.panel-demo{"data-app-name" => "agi/cesium"}
+/   .panel-body
+/     .row
+/       .demo-info.col-sm-8
+/         %h3 AGI's Cesium
+/         %p
+/           %a{target:"_blank", href:"http://www.agi.com/"} Analytical Graphics, Inc's (AGI)
+/           Cesium is a web-based globe and map engine for visualizing dynamic data. This demo app allows a user to have synchronized camera views across multiple clients. Pressing the "R" key will reset the synchronized views across all instances.
+/         %a.btn.btn-info{role: "button", href: "https://demo.virtual.wf/agi/cesium#!cesium"} Launch New Session
+/       .col-sm-4
+/         %a{href: "https://demo.virtual.wf/agi/cesium#!cesium"}
+/           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-agi-cesium.jpg"}
 
 .panel.panel-default.panel-demo.core{"data-app-name" => "minesweeper"}
   .panel-body
