Apache 2, it is.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
             </table>            
           </div>
           <div class="legal col-sm-6">
-            <p class="small">Development of the Virtual World Framework is sponsored by the Department of Defense and is <a href="https://github.com/virtual-world-framework/vwf/blob/master/LICENSE">licensed</a> using Apache II.</p>
+            <p class="small">Development of the Virtual World Framework is sponsored by the Department of Defense and is <a href="https://github.com/virtual-world-framework/vwf/blob/master/LICENSE">licensed</a> using Apache 2.</p>
             <p class="small">"Collaboration" symbol by Krisada, "Toolbox" symbol by Dolly Vu, "3D Glasses" symbol by Fabio Grande, from <a href="http://thenounproject.com">The Noun Project</a> collection.
           </div>
         </div>
