Move "Demos" link to the farthest left and rename "Getting Started" to "Tutorial"

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,8 +34,8 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/getting_started.html">Getting Started</a></li>
             <li><a href="/demos.html">Demos</a></li>
+            <li><a href="/getting_started.html">Tutorial</a></li>
             <li><a href="/documentation.html">Documentation</a></li>
             <li><a href="/releases.html">Downloads</a></li>
           </ul>
