--- a/css/vwf.css
+++ b/css/vwf.css
@@ -96,6 +96,8 @@ a[name] {
 
 .jumbotron .vwf-title {
   font-size: 50px;
+  margin-top: 0;
+  margin-bottom: 25px;
 }
 .github-img {
   width: 24px;
@@ -121,6 +123,11 @@ a[name] {
   margin: -15px;
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
+}
+.feature-row h2 {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  text-align: center;
 }
 .feature-row h3 {
   text-align: center;
@@ -151,12 +158,12 @@ h3 small {
   border: 1px solid #ddd;
   background-color: #f5f5f5;
 }
-#errorBox {
+.errorBox {
   line-height: 1.4;
   margin-bottom: 0;
 }
-#errorBox p,
-#errorBox ul li {
+.errorBox p,
+.errorBox ul li {
   font-size: 18px;
 }
 
@@ -180,7 +187,6 @@ h3 small {
   .jumbotron .vwf-title {
     font-size: 45px;
     text-align: center;
-    margin-top: 0;
   }
 }
 
