--- a/demos.haml
+++ b/demos.haml
@@ -3,8 +3,15 @@ layout: page
 title: Demos - Virtual World Framework
 ---
 
-
 %h1 Demos
+
+.panel.panel-default.panel-demo
+  .panel-body{"id" => "compatibilityBox"}
+    .row
+      .demo-info.col-sm-8
+        %noscript
+          %h3 Your browser has javascript disabled.
+          %p To see our awesome demo, you will need to enable javascript in your browser.
 
 .panel.panel-default.panel-demo
   .panel-body
@@ -224,3 +231,7 @@ title: Demos - Virtual World Framework
 /       .col-sm-4
 /         %a{href: "http://www.zshiftgroup.com/"}
 /           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-zshift.png"}
+
+%script( src="js/jquery-1.10.2.min.js" )
+%script( src="js/compatibility.js" )
+%script( src="js/demos.js")
