Update text and image for kimray app

--- a/demos.haml
+++ b/demos.haml
@@ -57,7 +57,7 @@ title: Demos - Virtual World Framework
         %p
           The Kimray valve app, built for the 
           %a{target: "_blank", href: "http://www.nmjc.edu/"} New Mexico Junior College
-          , is a live 3D Immersive Maintenance Demonstration built on top of VWF to demonstrate the capabilities of Remote Subject Matter Experts interacting with a student using a shared real-time lesson workspace. This app uses WebRTC to deliver real-time video and voice over IP without any browser plugins.
+          , is a 3D Immersive Maintenance Demonstration built on VWF to demonstrate the capabilities of Remote Subject Matter Experts interacting with a student via video chat, using a shared real-time lesson workspace.
         %a.btn.btn-info{role: "button", href: "https://ec2-54-226-9-164.compute-1.amazonaws.com/kimray/"} Launch New Session
       .col-sm-4
         %a{href: "https://ec2-54-226-9-164.compute-1.amazonaws.com/kimray/"}
