Add placeholder demo slot for LCS (for when we get it posted to demo server)

--- a/demos.haml
+++ b/demos.haml
@@ -49,6 +49,18 @@ title: Demos - Virtual World Framework
             %span.glyphicon.glyphicon-warning-sign
             This app will probably warn of certificate errors because it is self-signed with the wrong name.  No need to fear.  We'll fix it at some point.
 
+/ .panel.panel-default.panel-demo
+/   .panel-body
+/     .row
+/       .demo-info.col-sm-8
+/         %h3 Littoral Combat Ship
+/         %p
+/           Lockheed Martin's LCS Mission Bay Trainer is a web-based classroom where a student and instructor (communicating via video chat) walk through the Personnel Qualification Standard procedure to open the stern doors.
+/         %a.btn.btn-info{role: "button", href: ""} Launch New Session
+/       .col-sm-4
+/         %a{href: ""}
+/           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-lcs.png"}
+
 .panel.panel-default.panel-demo
   .panel-body
     .row
