--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -8,19 +8,12 @@ layout: default_no_footer
       <div class="nav-wrap" data-spy="affix" data-offset-top="0">
       <ul class="navmenu list-unstyled">
         <li>
-          <a href='#introduction' class='header' title='Introduction'>Introduction</a>
-          <ul class="list-unstyled">
-            <li><a href='#requirements' title='Requirements'>Requirements</a></li>
-            <li><a href='#troubleshooting' title='Troubleshooting'>Troubleshooting</a></li>
-            <li><a href='#install' title='Installation'>Installation</a></li>
-          </ul>
+          <a href='#install' class='header' title='Introduction'>Installation</a>
         </li>
         <li>
-          <a href='/getting_started.html' class='header'>Getting Started</a>
-        </li>
-        <li>
-          <a href='#devguide' class='header' title='Dev Guide'>Dev Guide</a>
+          <a href='#devguide' class='header' title='Dev Guide'>VWF Concepts</a>
           <ul class="list-unstyled">
+            <li><a href='#partsofvwf' title='Architecture'>Parts of VWF</a></li>
             <li><a href='#architecture' title='Architecture'>Architecture</a></li>
             <li><a href='#components' title='Components'>Components</a></li>
             <li><a href='#cameras' title='Cameras'>Cameras</a></li>
@@ -57,6 +50,9 @@ layout: default_no_footer
             <li><a href='#application-api' title='Application API'>Application API</a></li>
             <li><a href='#system-api' title='System API'>System API</a></li>
           </ul>
+        </li>
+        <li>
+          <a href='#corecontributors' class='header' title='Core Contributors'>Core Contributors</a>
         </li>
       </ul>
       </div>
