Update ADL demo links after changes to ADL's server.

--- a/demos.haml
+++ b/demos.haml
@@ -21,9 +21,9 @@ title: Demos - Virtual World Framework
         %p
           %a{href: "http://www.adlnet.gov"} Advanced Distributed Learning's (ADL)
           terrain demo shows dynamically generated terrain with atmospheric effects and grass that sways in the wind.
-        %a.btn.btn-info{role: "button", href: "https://vwf.adlnet.gov/0750/adl/sandbox/example_terraingrass/"} Launch New Session
+        %a.btn.btn-info{role: "button", href: "https://sandbox.adlnet.gov/0750/adl/sandbox/example_terraingrass/"} Launch New Session
       .col-sm-4
-        %a{href: "https://vwf.adlnet.gov/0750/adl/sandbox/example_terraingrass/"}
+        %a{href: "https://sandbox.adlnet.gov/0750/adl/sandbox/example_terraingrass/"}
           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-terraingrass.png"}
 
 .panel.panel-default.panel-demo
@@ -33,9 +33,9 @@ title: Demos - Virtual World Framework
         %h3 Middle-eastern Village
         %p
           ADL's middle-eastern village is a rich environment with human characters and vehicles.
-        %a.btn.btn-info{role: "button", href: "https://vwf.adlnet.gov/0750/adl/sandbox/z4xfNEQSbDYKB5WS/"} Launch New Session
+        %a.btn.btn-info{role: "button", href: "https://sandbox.adlnet.gov/0750/adl/sandbox/z4xfNEQSbDYKB5WS/"} Launch New Session
       .col-sm-4
-        %a{href: "https://vwf.adlnet.gov/0750/adl/sandbox/z4xfNEQSbDYKB5WS/"}
+        %a{href: "https://sandbox.adlnet.gov/0750/adl/sandbox/z4xfNEQSbDYKB5WS/"}
           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-village.png"}
 
 .panel.panel-default.panel-demo
