Remove commanc-center app from demos page, pending new art approval.

--- a/demos.haml
+++ b/demos.haml
@@ -82,23 +82,24 @@ title: Demos - Virtual World Framework
         %a{href: "https://ec2-54-226-9-164.compute-1.amazonaws.com/kimray/"}
           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-kimray.png"}
 
-.panel.panel-default.panel-demo.core{"data-app-name" => "command-center"}
-  .panel-body
-    .row
-      .demo-info.col-sm-8
-        %h3 Command Center
-        %p
-          The command center app is a virtual representation of a joint operations center, intended for use as a collaborative training classroom. Navigate using the standard VWF key and mouse controls.
-        %a.btn.btn-info{role: "button", href: "https://demo.virtual.wf/command-center"} Launch New Session
-      .col-sm-4
-        %a{href: "https://demo.virtual.wf/command-center"}
-          %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-command-center.png"}
-    .row
-      .col-xs-12
-        .alert.alert-warning
-          %p.small
-            %span.glyphicon.glyphicon-warning-sign
-            This demo features highly detailed models and may not load on slower internet connections.
+// Removing Pending Approval from J7 IA process
+/ .panel.panel-default.panel-demo.core{"data-app-name" => "command-center"}
+/   .panel-body
+/     .row
+/       .demo-info.col-sm-8
+/         %h3 Command Center
+/         %p
+/           The command center app is a virtual representation of a joint operations center, intended for use as a collaborative training classroom. Navigate using the standard VWF key and mouse controls.
+/         %a.btn.btn-info{role: "button", href: "https://demo.virtual.wf/command-center"} Launch New Session
+/       .col-sm-4
+/         %a{href: "https://demo.virtual.wf/command-center"}
+/           %img.img-responsive.img-rounded.pull-right.hidden-xs{src: "/images/gallery-command-center.png"}
+/     .row
+/       .col-xs-12
+/         .alert.alert-warning
+/           %p.small
+/             %span.glyphicon.glyphicon-warning-sign
+/             This demo features highly detailed models and may not load on slower internet connections.
 
 / .panel.panel-default.panel-demo{"data-app-name" => "agi/cesium"}
 /   .panel-body
